Created classes for gate and activity
