# Backend/openapi.yaml
@@ -33,6 +33,8 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Gate'
+        401:
+          description: "Token is missing or invalid"
         404:
           description: "No Gate found"
         400:
@@ -61,6 +63,8 @@ paths:
           description: "Sucess"
         400:
           description: "Invalid input data"
+        401:
+          description: "Token is missing or invalid"
         409:
           description: "Gate already exist"
         500:
@@ -81,11 +85,13 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Activity'
-        404:
-          description: "No activity found"
         400:
           description: "Invalid input data"
-          
+        401:
+          description: "Token is missing or invalid"
+        404:
+          description: "No activity found"
+
     post:
       tags:
       - "activity"
@@ -108,6 +114,8 @@ paths:
           description: "Success"
         400:
           description: "Invalid input data"
+        401:
+          description: "Token is missing or invalid"
         409:
           description: "Activity already exists"
         500:
@@ -139,6 +147,8 @@ paths:
           description: "Success"
         400:
           description: "Invalid input data"
+        401:
+          description: "Token is missing or invalid"
         404:
           description: "No Activity found"
         500:
@@ -220,6 +230,8 @@ paths:
           description: "Success"
         404:
           description: "User not foud"
+        401:
+          description: "Token is missing or invalid"
         500:
           description: "Internal server error"
   
@@ -246,6 +258,8 @@ paths:
           description: "Success"
         400:
           description: "Invalid input data"
+        401:
+          description: "Token is missing or invalid"
         404:
           description: "User not found"
         409:
@@ -343,7 +357,7 @@ paths:
           description: "Success"
         400:
           description: "Invalid input data"
-        403:
+        401:
           description: "Token is invalid"
         
 
